--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.linkedEditing": true
+    "editor.linkedEditing": true,
+    "workbench.editor.enablePreviewFromCodeNavigation": false
 }
